# personal-automation-hub

./: .cursorignore  .cursorrules  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
backend/: Dockerfile  main.py
backend/api/v1/webhooks/: gmail.py  google_calendar.py  notion.py
backend/core/: config.py  llm_models.py  security.py
backend/models/: calendar.py  google_account.py  notion.py
backend/services/google_calendar/: __init__.py  account_manager.py  client.py  config_loader.py  polling_scheduler.py  sync_engine.py  webhook_handler.py
backend/services/llm/: generator.py  models.py  openrouter_client.py
backend/services/notion/: client.py
docs/: all_day_events.md  calendar_sync.md  configuration_examples.md  google_calendar_setup.md  index.md  notion_webhook.md  notion_webhook_integration.md  troubleshooting.md
scripts/: deploy.sh  list_calendars.py  list_google_calendars.py  setup_gmail_watch.py  setup_google_oauth.py  test_calendar_access.py  test_gmail_access.py
terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  test_all_day_events.py  test_covering_busy_blocks.py  test_transparency_logic.py
tests/integration/: README.md  test_calendar_access.py  test_daily_polling.py  test_list_calendars.py  test_llm_service.py  test_sync_engine.py  test_webhook_handler.py
